# bingo

./: .envrc  .envrc.source.sh  .gitignore  crop.sh  double.sh  extract.sh  flake.nix  lib.sh  mrx.generated.nix  mrx.ignore.lst  mrx.toml  notes.md  overlay.sh  plans.md  run.sh  single.sh  test.env
batches/1/: single.env
batches/10/: double.env
batches/11/: single.env
batches/2/: single.env
batches/8/: double.env  extract.env
batches/9/: single.env
bingo/run/: crop.sh  double.sh  extract.sh  lib.sh  main.nix  overlay.sh  run.sh  single.sh  test.env
direnv/: .gitignore  default.nix  generate.sh  mrx.toml  package.nix  project.nix
direnv/nix/: generated.nix  infallible.nix  root.nix
frontend/: README.md  biome.jsonc  log.txt  package.json  tsconfig.app.json  vite.config.ts.timestamp-1763315841001-daa3b375971b9.mjs
frontend/src/: App.css  App.tsx  Buttons.tsx  Canvas.tsx  Downloadable.ts  ImageUpload.tsx  UseImageMemoProps.ts  ViewState.ts  ViewState.tsx  canvasCtxOrNone.ts  canvasOrNone.ts  constant.ts  createBingoCellsMatrix.ts  defineCanvasCallback.ts  defineCanvasCallback.tsx  drawBingoCard.ts  index.css  main.tsx  useDrawBackgroundImageCallback.ts  useDrawBackgroundImageCallback.tsx  useDrawBingoCardsCallback.ts  useGettingImageMemo.ts  (+7 more)
mrx/: .envrc.source.sh  .gitignore  Cargo.toml  flake.nix  generate.sh  generated.nix  mrx.generated.nix  mrx.toml  project.nix
mrx/crates/mrx-bin/: Cargo.toml
mrx/crates/mrx-bin/src/: cli.rs  command.rs  main.rs
nix/: dev-shell.nix  generated.nix  project.nix  shell.nix
package/: main.nix
shell/: main.nix
(+127 files in other folders)
